feat:dashboard sidebar ui done
